<package format="2">
  <name>ros2_image_publisher</name>
  <version>0.0.1</version>
  <description>ROS2 Image Publisher Node</description>
  <maintainer email="your_email@example.com">Your Name</maintainer>
  <license>Apache-2.0</license>
  
  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>image_transport</depend>
  <depend>cv_bridge</depend>
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>